MCR-2862 use "newer" java features #1
mainly collection handling, lamda expressions, parsing primitives